<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="foss.devmapal.axis_allies_calc.axis_allies_calc.MainActivity" >
    <item android:id="@+id/action_run"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/action_run"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_swap"
        android:title="@string/action_swap"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
